# NC-various-mechanisms

./: Basic.cpp  CIL.cpp  CMakeLists.txt  ChickModel.cpp  ChickModelPerturbation.cpp  ChickParameterSensitivityvaryDeps.m  ChickParameterSensitivityvarybetaD.m  ChickParameterSensitivityvarybetaeps.m  ChickStreamCoherence.m  CiLCoALennardJones.cpp  CiLCoAXenopusConvergenceTest.cpp  FDTsigma.m  GAPmatlab.m  LennardJones.cpp  LennardJonesForceComparison.m  LennardJonesregularDOMGROWTH.cpp  MassCentre.m  ParamSensBiasForLeadNoBias.m  ParamaterSensitivity.m  ParameterSensitivityBETAD.m  ParameterSensitivityDEPS.m  ParameterSensitiviyBETAEPS.m  README.md  RandomMotion.cpp  cellspeed.m  clusters.py  convergence.m  convergenceMassCentreRatios.m  mean_variance.m  pairwisedistances.m  proportionsGrowvsNongrow.m  timeVSbias.m  velocity.m
